# cvgen

./: .gitignore  Cargo.toml  README.md
docs/: core.md
examples/: example_cv.json  first.json
src/: cli.rs  generator.rs  main.rs  parser.rs  renderer.rs
src/assets/: default.json  mod.rs
src/cli/: README.md  mod.rs
src/common/: mod.rs
src/converstors/: mod.rs
src/generator/: mod.rs  model.rs
src/models/: common.rs  education.rs  expirience.rs  languages.rs  mod.rs  projects.rs  skills.rs
src/parser/: mod.rs  model.rs
templates/: simple.hbs  simple.html
templates/themes/: simple.html
