[package]
name = "cvgen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.11"
wkhtmltopdf = "0.4.0"
clap = "3.0.14"
