[package]
name = "cvgen"
version = "0.1.0"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.11"
wkhtmltopdf = "0.4.0"
clap = "3.0.14"
log = "0.4.14"
lazy_static = "1.4.0"
simple_logger = "2.1.0"
handlebars = "4.3.6"
